SERVER-108052 Set sorting metadata for bounded sorts (#38990)

Co-authored-by: Lee Maguire lee.maguire@mongodb.com
GitOrigin-RevId: 30fc8a6a97729b02b2d39f87be31b1281e8563b1