src/mongo/db/pipeline/pipeline_d.cpp
@@ -2036,6 +2036,7 @@ void PipelineD::performBoundedSortOptimization(PlanStage* rootStage,
                                                                      : DocumentSourceSort::kMax),
                                               0,
                                               sort->getLimit(),
+                                              sort->shouldSetSortKeyMetadata(),
                                               expCtx));
             } else {
                 // Since the sortPattern and the direction of the index don't agree we must use the
@@ -2051,6 +2052,7 @@ void PipelineD::performBoundedSortOptimization(PlanStage* rootStage,
                                                    : -unpack->getBucketMaxSpanSeconds()) *
                             1000,
                         sort->getLimit(),
+                        sort->shouldSetSortKeyMetadata(),
                         expCtx));
 
                 /**
